[package]
name = "cyberapi"
version = "0.3.0"
description = "API tool based on tauri, it is smaller and faster."
authors = ["gerrswin@te.net.ua", "tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/cyberapi"
default-run = "cyberapi"
edition = "2024"
rust-version = "1.92"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.21.5"
brotli-decompressor = "2.5.1"
chrono = "0.4.31"
cookie = "0.18.0"
cookie_store = "0.20.0"
hyper = { version = "0.14.28", features = ["client", "http1"] }
hyper-proxy = "0.9.1"
hyper-socks2 = { version = "0.8.0", default-features = false, features = ["rustls"] }
hyper-rustls = "0.24.1"
hyper-timeout = "0.4.1"
libflate = "2.0.0"
once_cell = "1.18.0"
sea-orm = { version = "0.12.10", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-json",
] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
strum = "0.25.0"
strum_macros = "0.25.1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
time = "0.3.31"
tokio = { version = "1.37.0", features = ["parking_lot"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.0"
windows = "0.48.0"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
http = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1
strip = true
# If set to true, short cut will be unavailable
lto = "thin"
opt-level = "z"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
